--- a/carrot-html/index.html
+++ b/carrot-html/index.html
@@ -17,7 +17,7 @@
     <meta name="description" content="Carrot - Multipurpose eCommerce HTML Template.">
     <meta name="author" content="ashishmaraviya">
 
-    <title>Carrot store</title>
+    <title>Carrot</title>
 
     <!-- App favicon -->
     <link rel="shortcut icon" href="assets/img/logo/favicon.png">
